funkcna zmena jazyka aj v hlavnom okne

--- a/ClientProject/Gui/src/main/resources/captions_en.properties
+++ b/ClientProject/Gui/src/main/resources/captions_en.properties
@@ -1,14 +1,37 @@
-# Login window
+# Login window and registration window
 loginLabel=Log in
 usernameLabel=Username
 passwordLabel=Password
 loginButton=Login
 registerButton=Register
-
-# Registration window
+changeLanguageButton=Change language
 registrationLabel=Registration
 detailsLabel=Enter your details
 firstnameLabel=Firstname
 lastnameLabel=Lastname
 cancelButton=Cancel
+
+# Calendar
+mondayLabel=Mon
+tuesdayLabel=Tue
+wednesdayLabel=Wed
+thursdayLabel=Thu
+fridayLabel=Fri
+saturdayLabel=Sat
+sundayLabel=Sun
+
+january=January
+february=February
+march=March
+april=April
+may=May
+june=June
+july=July
+august=August
+september=September
+october=October
+november=November
+december=December
+
+addEventButton=+ Add event
 
