--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -4,6 +4,7 @@ usernameLabel=Zadajte meno:
 passwordLabel=Zadajte heslo:
 loginButton=Prihlási
 registerButton=Registrova
+changeLanguageButton=Zmeni jazyk
 
 # Registration window
 registrationLabel=Registrácia
@@ -11,3 +12,27 @@ detailsLabel=Zadajte svoje údaje
 firstnameLabel=Meno
 lastnameLabel=Priezvisko
 cancelButton=Zruši
+
+# Calendar
+mondayLabel=Pon
+tuesdayLabel=Ut
+wednesdayLabel=Str
+thursdayLabel=Štv
+fridayLabel=Pia
+saturdayLabel=So
+sundayLabel=Ne
+
+january=Január
+february=Február
+march=Marec
+april=Apríl
+may=Máj
+june=Jún
+july=Júl
+august=August
+september=September
+october=Október
+november=November
+december=December
+
+addEventButton=+ Pridaj udalos
