podpora multilanguage pre vsetky obrazovky

--- a/ClientProject/Gui/src/main/resources/captions_en.properties
+++ b/ClientProject/Gui/src/main/resources/captions_en.properties
@@ -35,3 +35,19 @@ december=December
 
 addEventButton=+ Add event
 
+# Event detail
+titleLabel=Title:
+locationLabel=Location:
+dateLabel=Date:
+startsLabel=Starts:
+endsLabel=Ends:
+alertLabel=Alert:
+descriptionLabel=Description:
+
+dateErrorLabel=Wrong date format
+timeErrorLabel=Wrong time format
+titleErrorLabel=Title field can't be empty
+
+saveButton=Save
+deleteButton=Delete
+
