--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -36,3 +36,20 @@ november=November
 december=December
 
 addEventButton=+ Pridaj udalosù
+
+# Event detail
+titleLabel=N·zov:
+locationLabel=Miesto:
+dateLabel=D·tum:
+startsLabel=ZaËiatok:
+endsLabel=Koniec:
+alertLabel=Upozornenie:
+descriptionLabel=Popis:
+
+dateErrorLabel=Nespr·vny form·t d·tumu
+timeErrorLabel=Nespr·vny form·t Ëasu
+titleErrorLabel=Zadajte n·zov
+
+
+saveButton=Uloûiù
+deleteButton=Odstr·niù
