--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -1,55 +1,55 @@
 # Login window
-loginLabel=Prihl·senie
+loginLabel=Prihl\u00E1senie
 usernameLabel=Zadajte meno:
 passwordLabel=Zadajte heslo:
-loginButton=Prihl·siù
-registerButton=Registrovaù
-changeLanguageButton=Zmeniù jazyk
+loginButton=Prihl\u00E1si\u0165
+registerButton=Registrova\u0165
+changeLanguageButton=Zmeni\u0165 jazyk
 
 # Registration window
-registrationLabel=Registr·cia
-detailsLabel=Zadajte svoje ˙daje
+registrationLabel=Registr\u00E1cia
+detailsLabel=Zadajte svoje \u00FAdaje
 firstnameLabel=Meno
 lastnameLabel=Priezvisko
-cancelButton=Zruöiù
+cancelButton=Zru\u0161i\u0165
 
 # Calendar
 mondayLabel=Pon
 tuesdayLabel=Ut
 wednesdayLabel=Str
-thursdayLabel=ätv
+thursdayLabel=\u0160tv
 fridayLabel=Pia
 saturdayLabel=So
 sundayLabel=Ne
 
-january=Janu·r
-february=Febru·r
+january=Janu\u00E1r
+february=Febru\u00E1r
 march=Marec
-april=AprÌl
-may=M·j
-june=J˙n
-july=J˙l
+april=Apr\u00EDl
+may=M\u00E1j
+june=J\u00FAn
+july=J\u00FAl
 august=August
 september=September
-october=OktÛber
+october=Okt\u00F3ber
 november=November
 december=December
 
-addEventButton=+ Pridaj udalosù
+addEventButton=+ Pridaj udalos\u0165
 
 # Event detail
-titleLabel=N·zov:
+titleLabel=N\u00E1zov:
 locationLabel=Miesto:
-dateLabel=D·tum:
-startsLabel=ZaËiatok:
+dateLabel=D\u00E1tum:
+startsLabel=Za\u010Diatok:
 endsLabel=Koniec:
 alertLabel=Upozornenie:
 descriptionLabel=Popis:
 
-dateErrorLabel=Nespr·vny form·t d·tumu
-timeErrorLabel=Nespr·vny form·t Ëasu
-titleErrorLabel=Zadajte n·zov
+dateErrorLabel=Nespr\u00E1vny form\u00E1t d\u00E1tumu
+timeErrorLabel=Nespr\u00E1vny form\u00E1t \u010Dasu
+titleErrorLabel=Zadajte n\u00E1zov
 
 
-saveButton=Uloûiù
-deleteButton=Odstr·niù
+saveButton=Ulo\u017Ei\u0165
+deleteButton=Odstr\u00E1ni\u0165
