--- a/ClientProject/Gui/src/main/resources/captions_en.properties
+++ b/ClientProject/Gui/src/main/resources/captions_en.properties
@@ -6,7 +6,7 @@ loginButton=Login
 registerButton=Register
 changeLanguageButton=Change language
 registrationLabel=Registration
-detailsLabel=Enter your details
+detailsLabel=Enter your login
 firstnameLabel=Firstname
 lastnameLabel=Lastname
 cancelButton=Cancel
@@ -52,3 +52,15 @@ titleErrorLabel=Title field can't be empty
 saveButton=Save
 deleteButton=Delete
 
+# Alerts
+loginAlertContent=Please enter your username and password before logging in
+loginEmptyAlertTitle=You didn't fill all fields.
+loginWrongAlertTitle=Incorrect username or password has been entered.
+
+registrationEmptyContentTitle=Please enter all information.
+
+registrationExistsAlertTitle=Username already exists.
+registrationExistsAlertContent=Please enter some other username.
+
+pdfAlertTitle=PDF file was created!
+pdfAlertContent=PDF version of your calendar was saved.
