--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -54,3 +54,16 @@ titleErrorLabel=Zadajte n\u00E1zov
 
 saveButton=Ulo\u017Ei\u0165
 deleteButton=Odstr\u00E1ni\u0165
+
+# Alerts
+loginAlertContent=Pred prihl\u00E1sen\u00EDm zadajte pros\u00EDm svoje pou\u017E\u00EDvate\u013Esk\u00E9 meno a heslo.
+loginEmptyAlertTitle=Nevyplnili ste v\u0161etky polia.
+loginWrongAlertTitle=Zadali ste nespr\u00E1vne meno alebo heslo.
+
+registrationEmptyContentTitle=Pred registr\u00E1ciou vypl\u0148te pros\u00EDm v\u0161etky \u00FAdaje.
+
+registrationExistsAlertTitle=Tak\u00E9 pou\u017E\u00EDvate\u013Esk\u00E9 meno u\u017E existuje.
+registrationExistsAlertContent=Zadajte pros\u00EDm in\u00E9 pou\u017E\u00EDvate\u013Esk\u00E9 meno alebo heslo.
+
+pdfAlertTitle=PDF bolo vytvoren\u00E9!
+pdfAlertContent=PDF verzia v\u00E1\u0161ho kalend\u00E1ra bola ulo\u017Een\u00E1.
