--- a/ClientProject/Gui/src/main/resources/captions_en.properties
+++ b/ClientProject/Gui/src/main/resources/captions_en.properties
@@ -62,3 +62,11 @@ registrationExistsAlertContent=Please enter some other username.
 
 pdfAlertTitle=PDF file was created!
 pdfAlertContent=PDF version of your calendar was saved.
+
+# Alert
+postponeButton=Postpone
+postponeLabel=Postpone alert by:
+5minutes=5 min
+30minutes=30 min
+1hour =1 h
+6hours=6 h
