--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -65,3 +65,11 @@ registrationExistsAlertContent=Zadajte pros\u00EDm in\u00E9 pou\u017E\u00EDvate\
 
 pdfAlertTitle=PDF bolo vytvoren\u00E9!
 pdfAlertContent=PDF verzia v\u00E1\u0161ho kalend\u00E1ra bola ulo\u017Een\u00E1.
+
+#Alert
+postponeButton=Odlo\u017Ei\u0165
+postponeLabel=Odlo\u017Ei\u0165 pripomenutie o:
+5minutes=5 min
+30minutes=30 min
+1hour =1 h
+6hours=6 h
