--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -37,6 +37,7 @@ december=December
 
 addEventButton=+ Pridaj udalos\u0165
 exportPdfButton=Export do PDF
+logoutButton=Odhl\u00E1si\u0165
 
 # Event detail
 titleLabel=N\u00E1zov:
