--- a/ClientProject/Gui/src/main/resources/captions_en.properties
+++ b/ClientProject/Gui/src/main/resources/captions_en.properties
@@ -35,6 +35,7 @@ december=December
 
 addEventButton=+ Add event
 exportPdfButton=Export as PDF
+logoutButton=Log out
 
 # Event detail
 titleLabel=Title:
