pridanie konfirmacneho okna pri mazani eventu

--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -67,6 +67,10 @@ registrationExistsAlertContent=Zadajte pros\u00EDm in\u00E9 pou\u017E\u00EDvate\
 pdfAlertTitle=PDF bolo vytvoren\u00E9!
 pdfAlertContent=PDF verzia v\u00E1\u0161ho kalend\u00E1ra bola ulo\u017Een\u00E1.
 
+deleteConfirmationTitle=Potvrdenie odstr\u00E1nenia
+deleteConfirmationHeaderText=Idete odstr\u00E1ni\u0165 udalos\u0165: 
+deleteConfirmationQuestion=Chcete naozaj odstr\u00E1ni\u0165 t\u00FAto udalos\u0165?
+
 #Alert
 postponeButton=Odlo\u017Ei\u0165
 postponeLabel=Odlo\u017Ei\u0165 pripomenutie o:
