--- a/ClientProject/Gui/src/main/resources/captions_en.properties
+++ b/ClientProject/Gui/src/main/resources/captions_en.properties
@@ -64,6 +64,10 @@ registrationExistsAlertContent=Please enter some other username.
 pdfAlertTitle=PDF file was created!
 pdfAlertContent=PDF version of your calendar was saved.
 
+deleteConfirmationTitle=Delete confirmation
+deleteConfirmationHeaderText=You are deleting event: 
+deleteConfirmationQuestion=Do you really want to delete this event?
+
 # Alert
 postponeButton=Postpone
 postponeLabel=Postpone alert by:
