--- a/ClientProject/Gui/src/main/resources/captions_de.properties
+++ b/ClientProject/Gui/src/main/resources/captions_de.properties
@@ -37,6 +37,9 @@ addEventButton=+ Add event
 exportPdfButton=Export as PDF
 logoutButton=Log out
 
+# Pdf
+belong=Belongs to:
+
 # Event detail
 titleLabel=Title:
 locationLabel=Location:
