--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -39,6 +39,9 @@ addEventButton=+ Pridaj udalos\u0165
 exportPdfButton=Export do PDF
 logoutButton=Odhl\u00E1si\u0165
 
+# Pdf
+belong=Meno vlastn\u00EDka:
+
 # Event detail
 titleLabel=N\u00E1zov:
 locationLabel=Miesto:
