--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -81,3 +81,9 @@ postponeLabel=Odlo\u017Ei\u0165 pripomenutie o:
 30minutes=30 min
 1hour =1 h
 6hours=6 h
+
+# Error alerts
+serverError=Chyba na serveri
+clientError=Chyba na klientovi
+errorAlertHeader=Nie\u010Do sa pokazilo!
+errorAlertContext=Vysk\u00FA\u0161ajte akciu nesk\u00F4r pros\u00EDm.
