--- a/ClientProject/Gui/src/main/resources/captions_en.properties
+++ b/ClientProject/Gui/src/main/resources/captions_en.properties
@@ -78,3 +78,9 @@ postponeLabel=Postpone alert by:
 30minutes=30 min
 1hour =1 h
 6hours=6 h
+
+# Error alerts
+serverError=Server error
+clientError=Client error
+errorAlertHeader=Oops something's gone wrong!
+errorAlertContext=Try it later please.
