--- a/ClientProject/Gui/src/main/resources/captions_de.properties
+++ b/ClientProject/Gui/src/main/resources/captions_de.properties
@@ -1,86 +1,86 @@
 # Login window and registration window
-loginLabel=Log in
-usernameLabel=Username
-passwordLabel=Password
-loginButton=Login
-registerButton=Register
-changeLanguageButton=Change language
+loginLabel=Anmeldung
+usernameLabel=Benutzername
+passwordLabel=Passwort
+loginButton=Anmelden
+registerButton=Registrieren
+changeLanguageButton=Sprache wechseln
 registrationLabel=Registration
-detailsLabel=Enter your login
-firstnameLabel=Firstname
-lastnameLabel=Lastname
-cancelButton=Cancel
+detailsLabel=Geben Sie die Anmeldedaten ein
+firstnameLabel=Vorname
+lastnameLabel=Nachname
+cancelButton=Abbrechen
 
 # Calendar
-mondayLabel=Mon
-tuesdayLabel=Tue
-wednesdayLabel=Wed
-thursdayLabel=Thu
-fridayLabel=Fri
-saturdayLabel=Sat
-sundayLabel=Sun
+mondayLabel=Mo
+tuesdayLabel=Di
+wednesdayLabel=Mi
+thursdayLabel=Do
+fridayLabel=Fr
+saturdayLabel=Sa
+sundayLabel=So
 
-january=January
-february=February
-march=March
+january=Januar
+february=Februar
+march=M\u00E4rz
 april=April
-may=May
-june=June
-july=July
+may=Mai
+june=Juni
+july=Juli
 august=August
 september=September
-october=October
+october=Oktober
 november=November
-december=December
+december=Dezember
 
-addEventButton=+ Add event
-exportPdfButton=Export as PDF
-logoutButton=Log out
+addEventButton=+ Ereignis hinzuf\u00FCgen
+exportPdfButton=Als PDF exportieren
+logoutButton=Abmelden
 
 # Pdf
 belong=Belongs to:
 
 # Event detail
-titleLabel=Title:
-locationLabel=Location:
-startsLabel=Starts:
-endsLabel=Ends:
-alertLabel=Alert:
-descriptionLabel=Description:
+titleLabel=Titel:
+locationLabel=Ort:
+startsLabel=Beginn:
+endsLabel=Ende:
+alertLabel=Benachrichtung:
+descriptionLabel=Beschreibung:
 
-timeErrorLabel=Wrong time format
-titleErrorLabel=Title field can't be empty
+timeErrorLabel=Falsches Zeitformat
+titleErrorLabel=Titelfeld muss ausgef\u00FCllt sein
 
-saveButton=Save
-deleteButton=Delete
+saveButton=Speichern
+deleteButton=L\u00F6schen
 
 # Alerts
-loginAlertContent=Please enter your username and password before logging in
-loginEmptyAlertTitle=You didn't fill all fields.
-loginWrongAlertTitle=Incorrect username or password has been entered.
+loginAlertContent=Geben Sie den Benutzernamen und Passwort ein, bevor Sie sich anmelden.
+loginEmptyAlertTitle=Alle Felder m\u00FCssen ausgef\u00FCllt werden.
+loginWrongAlertTitle=Falscher Benutzername oder falsches Passwort.
 
-registrationEmptyContentTitle=Please enter all information.
+registrationEmptyContentTitle=Bitte geben Sie alle Informationen ein.
 
-registrationExistsAlertTitle=Username already exists.
-registrationExistsAlertContent=Please enter some other username.
+registrationExistsAlertTitle=Benutzername existiert bereits.
+registrationExistsAlertContent=Bitte geben Sie einen anderen Benutzernamen ein.
 
-pdfAlertTitle=PDF file was created!
-pdfAlertContent=PDF version of your calendar was saved.
+pdfAlertTitle=PDF Datei wurde erstellt!
+pdfAlertContent=PDF Version des Kalenders wurde gespeichert.
 
-deleteConfirmationTitle=Delete confirmation
-deleteConfirmationHeaderText=You are deleting event: 
-deleteConfirmationQuestion=Do you really want to delete this event?
+deleteConfirmationTitle=Best\u00E4tigung l\u00F6schen
+deleteConfirmationHeaderText=Folgende Veranstaltung wird gel\u00F6scht: 
+deleteConfirmationQuestion=Wollen Sie die Veranstaltung wirklich l\u00F6schen?
 
 # Alert
-postponeButton=Postpone
-postponeLabel=Postpone alert by:
+postponeButton=Verschieben
+postponeLabel=Benachrichtigung verschieben um:
 5minutes=5 min
 30minutes=30 min
 1hour =1 h
 6hours=6 h
 
 # Error alerts
-serverError=Server error
-clientError=Client error
-errorAlertHeader=Oops something's gone wrong!
-errorAlertContext=Try it later please.
+serverError=Server Error
+clientError=Client Error
+errorAlertHeader=Oops etwas ist falsch gelaufen!
+errorAlertContext=Versuche es sp\u00E4ter nochmal.
