preklad belongs to do nemciny :)

--- a/ClientProject/Gui/src/main/resources/captions_de.properties
+++ b/ClientProject/Gui/src/main/resources/captions_de.properties
@@ -38,7 +38,7 @@ exportPdfButton=Als PDF exportieren
 logoutButton=Abmelden
 
 # Pdf
-belong=Belongs to:
+belong=Geh\u00F6rt zu:
 
 # Event detail
 titleLabel=Titel:
