catchovanie vynimiek z UserClient premiestnene do gui

--- a/ClientProject/Gui/src/main/resources/captions_de.properties
+++ b/ClientProject/Gui/src/main/resources/captions_de.properties
@@ -80,7 +80,6 @@ postponeLabel=Benachrichtigung verschieben um:
 6hours=6 h
 
 # Error alerts
-serverError=Server Error
-clientError=Client Error
+error=Error
 errorAlertHeader=Oops etwas ist falsch gelaufen!
 errorAlertContext=Versuche es sp\u00E4ter nochmal.
