--- a/ClientProject/Gui/src/main/resources/captions_en.properties
+++ b/ClientProject/Gui/src/main/resources/captions_en.properties
@@ -80,7 +80,6 @@ postponeLabel=Postpone alert by:
 6hours=6 h
 
 # Error alerts
-serverError=Server error
-clientError=Client error
+error=Error
 errorAlertHeader=Oops something's gone wrong!
 errorAlertContext=Try it later please.
