--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -83,7 +83,6 @@ postponeLabel=Odlo\u017Ei\u0165 pripomenutie o:
 6hours=6 h
 
 # Error alerts
-serverError=Chyba na serveri
-clientError=Chyba na klientovi
+error=Chyba
 errorAlertHeader=Nie\u010Do sa pokazilo!
 errorAlertContext=Vysk\u00FA\u0161ajte akciu nesk\u00F4r pros\u00EDm.
