pridanie funkcionality vyberu typu eventu

--- a/ClientProject/Gui/src/main/resources/captions_de.properties
+++ b/ClientProject/Gui/src/main/resources/captions_de.properties
@@ -43,6 +43,7 @@ belong=Geh\u00F6rt zu:
 # Event detail
 titleLabel=Titel:
 locationLabel=Ort:
+typeLabel=Typ:
 startsLabel=Beginn:
 endsLabel=Ende:
 alertLabel=Benachrichtung:
