--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -45,6 +45,7 @@ belong=Meno vlastn\u00EDka:
 # Event detail
 titleLabel=N\u00E1zov:
 locationLabel=Miesto:
+typeLabel=Typ:
 startsLabel=Za\u010Diatok:
 endsLabel=Koniec:
 alertLabel=Upozornenie:
