--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -66,7 +66,7 @@ loginWrongAlertTitle=Zadali ste nespr\u00E1vne meno alebo heslo.
 registrationEmptyContentTitle=Pred registr\u00E1ciou vypl\u0148te pros\u00EDm v\u0161etky \u00FAdaje.
 
 registrationExistsAlertTitle=Tak\u00E9 pou\u017E\u00EDvate\u013Esk\u00E9 meno u\u017E existuje.
-registrationExistsAlertContent=Zadajte pros\u00EDm in\u00E9 pou\u017E\u00EDvate\u013Esk\u00E9 meno alebo heslo.
+registrationExistsAlertContent=Zadajte pros\u00EDm in\u00E9 pou\u017E\u00EDvate\u013Esk\u00E9 meno.
 
 pdfAlertTitle=PDF bolo vytvoren\u00E9!
 pdfAlertContent=PDF verzia v\u00E1\u0161ho kalend\u00E1ra bola ulo\u017Een\u00E1.
