uprava chybovych hlasok v alert oknach

--- a/ClientProject/Gui/src/main/resources/captions_de.properties
+++ b/ClientProject/Gui/src/main/resources/captions_de.properties
@@ -84,3 +84,9 @@ postponeLabel=Benachrichtigung verschieben um:
 error=Error
 errorAlertHeader=Oops etwas ist falsch gelaufen!
 errorAlertContext=Versuche es sp\u00E4ter nochmal.
+
+eventsInMonthErrorMessage=Oops, can't show events in calendar!
+getEventErrorMessage=Oops, can't get event info!
+addEventErrorMessage=Oops, can't save event!
+updateEventErrorMessage=Oops, can't update event!
+deleteEventErrorMessage=Oops, can't delete event!
