--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -87,3 +87,9 @@ postponeLabel=Odlo\u017Ei\u0165 pripomenutie o:
 error=Chyba
 errorAlertHeader=Nie\u010Do sa pokazilo!
 errorAlertContext=Vysk\u00FA\u0161ajte akciu nesk\u00F4r pros\u00EDm.
+
+eventsInMonthErrorMessage=Nie je mo\u017En\u00E9 zobrazi\u0165 udalosti v kalend\u00E1ri!
+getEventErrorMessage=Nie je mo\u017En\u00E9 z\u00EDska\u0165 inform\u00E1cie o udalosti!
+addEventErrorMessage=Nie je mo\u017En\u00E9 ulo\u017Ei\u0165 udalos\u0165!
+updateEventErrorMessage=Nie je mo\u017En\u00E9 aktualizova\u0165 udalos\u0165!
+deleteEventErrorMessage=Nie je mo\u017En\u00E9 vymaza\u0165 udalos\u0165!
