vytahovanie uri z konfiguracie na events clientovi + bug fix na serveri pri prihlasovani

--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -59,7 +59,7 @@ saveButton=Ulo\u017Ei\u0165
 deleteButton=Odstr\u00E1ni\u0165
 
 # Alerts
-loginAlertContent=Pred prihl\u00E1sen\u00EDm zadajte pros\u00EDm svoje pou\u017E\u00EDvate\u013Esk\u00E9 meno a heslo.
+loginAlertContent=Pred prihl\u00E1sen\u00EDm zadajte pros\u00EDm spr\u00E1vne pou\u017E\u00EDvate\u013Esk\u00E9 meno a heslo.
 loginEmptyAlertTitle=Nevyplnili ste v\u0161etky polia.
 loginWrongAlertTitle=Zadali ste nespr\u00E1vne meno alebo heslo.
 
