uprava validacie vstupu v AddEvent

--- a/ClientProject/Gui/src/main/resources/captions_de.properties
+++ b/ClientProject/Gui/src/main/resources/captions_de.properties
@@ -51,6 +51,7 @@ descriptionLabel=Beschreibung:
 
 timeErrorLabel=Falsches Zeitformat
 titleErrorLabel=Titelfeld muss ausgef\u00FCllt sein
+dateErrorLabel=Datumfeld muss ausgef\u00FCllt sein
 
 saveButton=Speichern
 deleteButton=L\u00F6schen
