--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -53,7 +53,7 @@ descriptionLabel=Popis:
 
 timeErrorLabel=Nespr\u00E1vny form\u00E1t \u010Dasu
 titleErrorLabel=Zadajte n\u00E1zov
-
+dateErrorLabel=Zadajte d\u00E1tum
 
 saveButton=Ulo\u017Ei\u0165
 deleteButton=Odstr\u00E1ni\u0165
