multilanguage pre choicebox s typmi eventov

--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -93,3 +93,9 @@ getEventErrorMessage=Nie je mo\u017En\u00E9 z\u00EDska\u0165 inform\u00E1cie o u
 addEventErrorMessage=Nie je mo\u017En\u00E9 ulo\u017Ei\u0165 udalos\u0165!
 updateEventErrorMessage=Nie je mo\u017En\u00E9 aktualizova\u0165 udalos\u0165!
 deleteEventErrorMessage=Nie je mo\u017En\u00E9 vymaza\u0165 udalos\u0165!
+
+# Event types
+freeTime=Vo\u013En\u00FD \u010Das
+work=Pr\u00E1ca
+school=\u0160kola
+others=In\u00E9
