vytvorenie DailyRepetitionComponentu, zaklad logiky zobrazovana repetition komponentov

--- a/ClientProject/Gui/src/main/resources/captions_de.properties
+++ b/ClientProject/Gui/src/main/resources/captions_de.properties
@@ -97,3 +97,9 @@ freeTime=Free time
 work=Work
 school=School
 others=Others
+
+# Repetition types
+daily=T\u00E4glich
+weekly=W\u00F6chentlich
+monthly=Monatlich
+yearly=J\u00E4hrlich
