--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -99,3 +99,9 @@ freeTime=Vo\u013En\u00FD \u010Das
 work=Pr\u00E1ca
 school=\u0160kola
 others=In\u00E9
+
+# Repetition types
+daily=Denne
+weekly=T\u00FD\u017Edenne
+monthly=Mesa\u010Dne
+yearly=Ro\u010Dne
