vytvorenie komponentu WeeklyRepetitionComponent

--- a/ClientProject/Gui/src/main/resources/captions_de.properties
+++ b/ClientProject/Gui/src/main/resources/captions_de.properties
@@ -103,3 +103,13 @@ daily=T\u00E4glich
 weekly=W\u00F6chentlich
 monthly=Monatlich
 yearly=J\u00E4hrlich
+
+# Repetition labels
+repetitionIntervalFirstLabel=Jeden
+repetitionIntervalDayLabel=. Tag
+repetitionIntervalWeekLabel=. Woche
+repetitionIntervalMonthLabel=. Monat
+repetitionIntervalYearLabel=. Jahr
+
+# Repetition error labels
+repetitionIntervalErrorLabel=Geben Sie eine Zahl zwischen 1 und 999 ein
