--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -105,3 +105,13 @@ daily=Denne
 weekly=T\u00FD\u017Edenne
 monthly=Mesa\u010Dne
 yearly=Ro\u010Dne
+
+# Repetition labels
+repetitionIntervalFirstLabel=Ka\u017Ed\u00FD
+repetitionIntervalDayLabel=. de\u0148
+repetitionIntervalWeekLabel=. t\u00FD\u017Ede\u0148
+repetitionIntervalMonthLabel=. mesiac
+repetitionIntervalYearLabel=. rok
+
+# Repetition error labels
+repetitionIntervalErrorLabel=Zadajte \u010D\u00EDslo z rozsahu 1 a\u017E 999
