refaktoring Daily a WeeklyRepetition komponentov, inicializacia niektorych casti MonthlyRepetitionComponent

--- a/ClientProject/Gui/src/main/resources/captions_de.properties
+++ b/ClientProject/Gui/src/main/resources/captions_de.properties
@@ -111,5 +111,8 @@ repetitionIntervalWeekLabel=. Woche
 repetitionIntervalMonthLabel=. Monat
 repetitionIntervalYearLabel=. Jahr
 
+dayOfMonthLabel=Am Tag Nr.
+dayOfWeekWithOrdinalLabel=Am
+
 # Repetition error labels
 repetitionIntervalErrorLabel=Geben Sie eine Zahl zwischen 1 und 999 ein
