--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -113,5 +113,8 @@ repetitionIntervalWeekLabel=. t\u00FD\u017Ede\u0148
 repetitionIntervalMonthLabel=. mesiac
 repetitionIntervalYearLabel=. rok
 
+dayOfMonthLabel=V dni \u010D.
+dayOfWeekWithOrdinalLabel=V
+
 # Repetition error labels
 repetitionIntervalErrorLabel=Zadajte \u010D\u00EDslo z rozsahu 1 a\u017E 999
