dokoncenie ui casti MonthlyRepetitionComponent

--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -115,6 +115,7 @@ repetitionIntervalYearLabel=. rok
 
 dayOfMonthLabel=V dni \u010D.
 dayOfWeekWithOrdinalLabel=V
+lastLabel=posledn\u00FD/\u00FA
 
 # Repetition error labels
 repetitionIntervalErrorLabel=Zadajte \u010D\u00EDslo z rozsahu 1 a\u017E 999
