--- a/ClientProject/Gui/src/main/resources/captions_de.properties
+++ b/ClientProject/Gui/src/main/resources/captions_de.properties
@@ -113,6 +113,7 @@ repetitionIntervalYearLabel=. Jahr
 
 dayOfMonthLabel=Am Tag Nr.
 dayOfWeekWithOrdinalLabel=Am
+lastLabel=zuletzt
 
 # Repetition error labels
 repetitionIntervalErrorLabel=Geben Sie eine Zahl zwischen 1 und 999 ein
