metoda setRepetitionIntervalCaption v Repetition komponentoch

--- a/ClientProject/Gui/src/main/resources/captions_de.properties
+++ b/ClientProject/Gui/src/main/resources/captions_de.properties
@@ -115,5 +115,7 @@ dayOfMonthLabel=Am Tag Nr.
 dayOfWeekWithOrdinalLabel=Am
 lastLabel=zuletzt
 
+monthSelectionLabel=in Monat
+
 # Repetition error labels
 repetitionIntervalErrorLabel=Geben Sie eine Zahl zwischen 1 und 999 ein
