--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -115,7 +115,9 @@ repetitionIntervalYearLabel=. rok
 
 dayOfMonthLabel=V dni \u010D.
 dayOfWeekWithOrdinalLabel=V
-lastLabel=posledn\u00FD/\u00FA
+lastLabel=posledn\u00FD/\u00E1
+
+monthSelectionLabel=v mesiaci
 
 # Repetition error labels
 repetitionIntervalErrorLabel=Zadajte \u010D\u00EDslo z rozsahu 1 a\u017E 999
