inicializacia hodnot v poliach, zobrazenie detailu repetition

--- a/ClientProject/Gui/src/main/resources/captions_de.properties
+++ b/ClientProject/Gui/src/main/resources/captions_de.properties
@@ -93,10 +93,10 @@ updateEventErrorMessage=Oops, can't update event!
 deleteEventErrorMessage=Oops, can't delete event!
 
 # Event types
-freeTime=Free time
-work=Work
-school=School
-others=Others
+freeTime=Freizeit
+work=Arbeit
+school=Schule
+others=Andere
 
 # Repetition types
 daily=T\u00E4glich
@@ -105,6 +105,8 @@ monthly=Monatlich
 yearly=J\u00E4hrlich
 
 # Repetition labels
+repetitionButton=Wiederholen
+editRepetitionButton=Wiederholung bearbeiten
 repetitionIntervalFirstLabel=Jeden
 repetitionIntervalDayLabel=. Tag
 repetitionIntervalWeekLabel=. Woche
