preklikavania pomocou repetitionButton

--- a/ClientProject/Gui/src/main/resources/captions_de.properties
+++ b/ClientProject/Gui/src/main/resources/captions_de.properties
@@ -54,7 +54,9 @@ titleErrorLabel=Titelfeld muss ausgef\u00FCllt sein
 dateErrorLabel=Datumfeld muss ausgef\u00FCllt sein
 
 saveButton=Speichern
+saveAllButton=Speichern alle
 deleteButton=L\u00F6schen
+deleteAllButton=L\u00F6schen alle
 
 # Alerts
 loginAlertContent=Geben Sie den Benutzernamen und Passwort ein, bevor Sie sich anmelden.
