--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -56,7 +56,9 @@ titleErrorLabel=Zadajte n\u00E1zov
 dateErrorLabel=Zadajte d\u00E1tum
 
 saveButton=Ulo\u017Ei\u0165
+saveAllButton=Ulo\u017Ei\u0165 v\u0161etky
 deleteButton=Odstr\u00E1ni\u0165
+deleteAllButton=Odstr\u00E1ni\u0165 v\u0161etky
 
 # Alerts
 loginAlertContent=Pred prihl\u00E1sen\u00EDm zadajte pros\u00EDm spr\u00E1vne pou\u017E\u00EDvate\u013Esk\u00E9 meno a heslo.
