fungujuce mazanie eventu z repetition aj so spravnym prekreslenim v kalendari

--- a/ClientProject/Gui/src/main/resources/captions_de.properties
+++ b/ClientProject/Gui/src/main/resources/captions_de.properties
@@ -51,7 +51,6 @@ descriptionLabel=Beschreibung:
 
 timeErrorLabel=Falsches Zeitformat
 titleErrorLabel=Titelfeld muss ausgef\u00FCllt sein
-dateErrorLabel=Datumfeld muss ausgef\u00FCllt sein
 
 saveButton=Speichern
 saveAllButton=Speichern alle
@@ -74,6 +73,8 @@ pdfAlertContent=PDF Version des Kalenders wurde gespeichert.
 deleteConfirmationTitle=Best\u00E4tigung l\u00F6schen
 deleteConfirmationHeaderText=Folgende Veranstaltung wird gel\u00F6scht: 
 deleteConfirmationQuestion=Wollen Sie die Veranstaltung wirklich l\u00F6schen?
+deleteAllConfirmationHeaderText=Sie werden alle Veranstaltungen aus der Wiederholung entfernen: 
+deleteAllConfirmationQuestion=Wollen Sie wirklich alle Veranstaltungen aus dieser Wiederholung entfernen?
 
 # Alert
 postponeButton=Verschieben
