--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -53,7 +53,6 @@ descriptionLabel=Popis:
 
 timeErrorLabel=Nespr\u00E1vny form\u00E1t \u010Dasu
 titleErrorLabel=Zadajte n\u00E1zov
-dateErrorLabel=Zadajte d\u00E1tum
 
 saveButton=Ulo\u017Ei\u0165
 saveAllButton=Ulo\u017Ei\u0165 v\u0161etky
@@ -76,6 +75,8 @@ pdfAlertContent=PDF verzia v\u00E1\u0161ho kalend\u00E1ra bola ulo\u017Een\u00E1
 deleteConfirmationTitle=Potvrdenie odstr\u00E1nenia
 deleteConfirmationHeaderText=Idete odstr\u00E1ni\u0165 udalos\u0165: 
 deleteConfirmationQuestion=Chcete naozaj odstr\u00E1ni\u0165 t\u00FAto udalos\u0165?
+deleteAllConfirmationHeaderText=Idete odstr\u00E1ni\u0165 v\u0161etky udalosti z opakovania: 
+deleteAllConfirmationQuestion=Chcete naozaj odstr\u00E1ni\u0165 v\u0161etky udalosti z tohto opakovania?
 
 #Alert
 postponeButton=Odlo\u017Ei\u0165
