funkcny pripad pouzitia registracie noveho pouzivatela

--- a/ClientProject/Gui/src/main/resources/captions_de.properties
+++ b/ClientProject/Gui/src/main/resources/captions_de.properties
@@ -67,6 +67,9 @@ registrationEmptyAlertContent=Bitte geben Sie alle Informationen ein.
 registrationExistsAlertTitle=Benutzername existiert bereits.
 registrationExistsAlertContent=Bitte geben Sie einen anderen Benutzernamen ein.
 
+successfulRegistrationAlertTitle=Registrierung erfolgreich
+successfulRegistrationAlertContent=Fortsetzen mit Login
+
 pdfAlertTitle=PDF Datei wurde erstellt!
 pdfAlertContent=PDF Version des Kalenders wurde gespeichert.
 
