--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -69,6 +69,10 @@ registrationEmptyAlertContent=Pred registr\u00E1ciou vypl\u0148te pros\u00EDm v\
 registrationExistsAlertTitle=Tak\u00E9 pou\u017E\u00EDvate\u013Esk\u00E9 meno u\u017E existuje.
 registrationExistsAlertContent=Zadajte pros\u00EDm in\u00E9 pou\u017E\u00EDvate\u013Esk\u00E9 meno.
 
+
+successfulRegistrationAlertTitle=Registr\u00E1cia bola \u00FAspe\u0161n\u00E1
+successfulRegistrationAlertContent=Pokra\u010Dujte prihl\u00E1sen\u00EDm
+
 pdfAlertTitle=PDF bolo vytvoren\u00E9!
 pdfAlertContent=PDF verzia v\u00E1\u0161ho kalend\u00E1ra bola ulo\u017Een\u00E1.
 
