uprava status kodu pri autentifikacii pomocou jwt, premenovanie tried security filtrov

--- a/ClientProject/Gui/src/main/resources/captions_de.properties
+++ b/ClientProject/Gui/src/main/resources/captions_de.properties
@@ -58,7 +58,7 @@ deleteButton=L\u00F6schen
 deleteAllButton=L\u00F6schen alle
 
 # Alerts
-loginAlertContent=Geben Sie den Benutzernamen und Passwort ein, bevor Sie sich anmelden.
+loginAlertContent=Bitte geben Sie ein g\u00FCltiges Referenzen.
 loginEmptyAlertTitle=Alle Felder m\u00FCssen ausgef\u00FCllt werden.
 loginWrongAlertTitle=Falscher Benutzername oder falsches Passwort.
 
