--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -60,7 +60,7 @@ deleteButton=Odstr\u00E1ni\u0165
 deleteAllButton=Odstr\u00E1ni\u0165 v\u0161etky
 
 # Alerts
-loginAlertContent=Pred prihl\u00E1sen\u00EDm zadajte pros\u00EDm spr\u00E1vne pou\u017E\u00EDvate\u013Esk\u00E9 meno a heslo.
+loginAlertContent=Zadajte pros\u00EDm platn\u00E9 prihlasovacie \u00FAdaje.
 loginEmptyAlertTitle=Nevyplnili ste v\u0161etky polia.
 loginWrongAlertTitle=Zadali ste nespr\u00E1vne meno alebo heslo.
 
