fix api volania na upravu eventu v opakovani, vytvorenie novych gui elementov v obrazovke pridania udalosti

--- a/ClientProject/Gui/src/main/resources/captions_de.properties
+++ b/ClientProject/Gui/src/main/resources/captions_de.properties
@@ -113,6 +113,7 @@ yearly=J\u00E4hrlich
 # Repetition labels
 repetitionButton=Wiederholen
 editRepetitionButton=Wiederholung bearbeiten
+hideRepetitionButton=Wiederholung ausblenden
 repetitionIntervalFirstLabel=Jeden
 repetitionIntervalDayLabel=. Tag
 repetitionIntervalWeekLabel=. Woche
