--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -116,6 +116,7 @@ yearly=Ro\u010Dne
 # Repetition labels
 repetitionButton=Opakova\u0165
 editRepetitionButton=Upravi\u0165 opakovanie
+hideRepetitionButton=Skry\u0165 opakovanie
 repetitionIntervalFirstLabel=Ka\u017Ed\u00FD
 repetitionIntervalDayLabel=. de\u0148
 repetitionIntervalWeekLabel=. t\u00FD\u017Ede\u0148
