refactoring obrazovky na pridavanie a update udalosti

--- a/ClientProject/Gui/src/main/resources/captions_de.properties
+++ b/ClientProject/Gui/src/main/resources/captions_de.properties
@@ -97,6 +97,17 @@ getEventErrorMessage=Oops, can't get event info!
 addEventErrorMessage=Oops, can't save event!
 updateEventErrorMessage=Oops, can't update event!
 deleteEventErrorMessage=Oops, can't delete event!
+eventNotFoundErrorMessage=Event does not exist.
+getEventAccessDeniedErrorMessage=You do not have permission to get event info.
+updateEventAccessDeniedErrorMessage=You do not have permission to update event.
+deleteEventAccessDeniedErrorMessage=You do not have permission to delete event.
+
+addRepetitionErrorMessage=Oops, can't add repetition!
+updateRepetitionErrorMessage=Oops, can't update repetition!
+repetitionNotFoundErrorMessage=Repetition does not exist.
+updateRepetitionAccessDeniedErrorMessage=You do not have permission to update repetition.
+deleteRepetitionAccessDeniedErrorMessage=You do not have permission to delete repetition.
+addRepetitionAccessDeniedErrorMessage=You do not have permission to add repetition.
 
 # Event types
 freeTime=Freizeit
@@ -112,8 +123,9 @@ yearly=J\u00E4hrlich
 
 # Repetition labels
 repetitionButton=Wiederholen
-editRepetitionButton=Wiederholung bearbeiten
 hideRepetitionButton=Wiederholung ausblenden
+saveRepetitionButton=Speichern Wiederholung
+editRepetitionButton=Wiederholung bearbeiten
 repetitionIntervalFirstLabel=Jeden
 repetitionIntervalDayLabel=. Tag
 repetitionIntervalWeekLabel=. Woche
