--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -98,8 +98,19 @@ errorAlertContext=Vysk\u00FA\u0161ajte akciu nesk\u00F4r pros\u00EDm.
 eventsInMonthErrorMessage=Nie je mo\u017En\u00E9 zobrazi\u0165 udalosti v kalend\u00E1ri!
 getEventErrorMessage=Nie je mo\u017En\u00E9 z\u00EDska\u0165 inform\u00E1cie o udalosti!
 addEventErrorMessage=Nie je mo\u017En\u00E9 ulo\u017Ei\u0165 udalos\u0165!
-updateEventErrorMessage=Nie je mo\u017En\u00E9 aktualizova\u0165 udalos\u0165!
+updateEventErrorMessage=Nie je mo\u017En\u00E9 upravi\u0165 udalos\u0165!
 deleteEventErrorMessage=Nie je mo\u017En\u00E9 vymaza\u0165 udalos\u0165!
+eventNotFoundErrorMessage=Udalos\u0165 neexistuje.
+getEventAccessDeniedErrorMessage=Nem\u00E1te pr\u00E1va na z\u00EDskanie inform\u00E1ci\u00ED o udalosti.
+updateEventAccessDeniedErrorMessage=Nem\u00E1te pr\u00E1va na upravenie udalosti.
+deleteEventAccessDeniedErrorMessage=Nem\u00E1te pr\u00E1va na odstr\u00E1nenie udalosti.
+
+addRepetitionErrorMessage=Nie je mo\u017En\u00E9 prida\u0165 opakovanie!
+updateRepetitionErrorMessage=Nie je mo\u017En\u00E9 upravi\u0165 opakovanie!
+repetitionNotFoundErrorMessage=Opakovanie neexistuje.
+updateRepetitionAccessDeniedErrorMessage=Nem\u00E1te pr\u00E1va na upravenie opakovania.
+deleteRepetitionAccessDeniedErrorMessage=Nem\u00E1te pr\u00E1va na odstr\u00E1nenie opakovania.
+addRepetitionAccessDeniedErrorMessage=Nem\u00E1te pr\u00E1va na pridanie opakovania.
 
 # Event types
 freeTime=Vo\u013En\u00FD \u010Das
@@ -115,8 +126,9 @@ yearly=Ro\u010Dne
 
 # Repetition labels
 repetitionButton=Opakova\u0165
-editRepetitionButton=Upravi\u0165 opakovanie
 hideRepetitionButton=Skry\u0165 opakovanie
+saveRepetitionButton=Ulo\u017Ei\u0165 opakovanie
+editRepetitionButton=Upravi\u0165 opakovanie
 repetitionIntervalFirstLabel=Ka\u017Ed\u00FD
 repetitionIntervalDayLabel=. de\u0148
 repetitionIntervalWeekLabel=. t\u00FD\u017Ede\u0148
