--- a/ClientProject/Gui/src/main/resources/captions_de.properties
+++ b/ClientProject/Gui/src/main/resources/captions_de.properties
@@ -1,7 +1,7 @@
 # Login window and registration window
 loginLabel=Anmeldung
-usernameLabel=Benutzername
-passwordLabel=Passwort
+usernameLabel=Benutzername:
+passwordLabel=Passwort:
 loginButton=Anmelden
 registerButton=Registrieren
 changeLanguageButton=Sprache wechseln
