--- a/ClientProject/Gui/src/main/resources/captions_sk.properties
+++ b/ClientProject/Gui/src/main/resources/captions_sk.properties
@@ -1,7 +1,7 @@
 # Login window
 loginLabel=Prihl\u00E1senie
-usernameLabel=Zadajte meno:
-passwordLabel=Zadajte heslo:
+usernameLabel=Pou\u017E\u00EDvate\u013Esk\u00E9 meno:
+passwordLabel=Heslo:
 loginButton=Prihl\u00E1si\u0165
 registerButton=Registrova\u0165
 changeLanguageButton=Zmeni\u0165 jazyk
